Fix some alignment in bottomBar

--- a/ares/Ares.css
+++ b/ares/Ares.css
@@ -139,8 +139,8 @@ body {
 .ares-tab-button {
 	padding-bottom: 0px;
 	padding-top: 0px;
-	padding-right: 10px;
-	padding-left: 0px;
+	padding-right: 0px;
+	padding-left: 12px;
 }
 
 
@@ -154,6 +154,11 @@ body {
 }
 
 .enyo-fittable-columns-layout.onyx-toolbar-inline > .ares-filedrawer {
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
+
+.enyo-fittable-columns-layout.onyx-toolbar-inline > .ares-docbar-tabs {
 	margin-top: 0px;
 	margin-bottom: 0px;
 }
